# Shape

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2_Image.cmake
src/: graphics.cpp  graphics.h  main.cpp  state.h  window.cpp  window.h
src/graphics/: graphics.cpp  graphics.h  sprite.cpp  sprite.h  texture.h
